--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,26 @@
 	</properties>
 
 	<dependencies>
-		
+		<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+	  <groupId>org.assertj</groupId>
+  	  <artifactId>assertj-core</artifactId>
+	  <version>2.3.0</version>
+ 	  <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+ 	  <groupId>pl.pragmatists</groupId>
+  	  <artifactId>JUnitParams</artifactId>
+  	  <version>1.0.4</version>
+  	  <scope>test</scope>
+	</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
